Unit2/C_basic/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:58:51 **** Rebuild of configuration Debug for project Assi_1_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_1_2.o" "..\\src\\Assi_1_2.c" 
gcc -o Assi_1_2.exe "src\\Assi_1_2.o" 
11:58:57 **** Incremental Build of configuration Debug for project Assi_1_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_1_2.o" "..\\src\\Assi_1_2.c" 
..\src\Assi_1_2.c: In function 'main':
..\src\Assi_1_2.c:18:28: error: 'X' undeclared (first use in this function)
     printf("You enterd:%d",X);
                            ^
..\src\Assi_1_2.c:18:28: note: each undeclared identifier is reported only once for each function it appears in
..\src\Assi_1_2.c:19:2: warning: 'return' with no value, in function returning non-void
  return;
  ^~~~~~
..\src\Assi_1_2.c:14:5: note: declared here
 int main(void) {
     ^~~~
Info: Nothing to build for Assi_1_1
11:59:43 **** Incremental Build of configuration Debug for project Assi_1_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_1_2.o" "..\\src\\Assi_1_2.c" 
..\src\Assi_1_2.c: In function 'main':
..\src\Assi_1_2.c:18:28: error: 'X' undeclared (first use in this function)
     printf("You enterd:%d",X);
                            ^
..\src\Assi_1_2.c:18:28: note: each undeclared identifier is reported only once for each function it appears in
..\src\Assi_1_2.c:19:9: error: 'EXSIT' undeclared (first use in this function)
  return EXSIT;
         ^~~~~
11:59:49 **** Incremental Build of configuration Debug for project Assi_1_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_1_2.o" "..\\src\\Assi_1_2.c" 
..\src\Assi_1_2.c: In function 'main':
..\src\Assi_1_2.c:18:28: error: 'X' undeclared (first use in this function)
     printf("You enterd:%d",X);
                            ^
..\src\Assi_1_2.c:18:28: note: each undeclared identifier is reported only once for each function it appears in
..\src\Assi_1_2.c:19:9: error: 'EXSIT' undeclared (first use in this function)
  return EXSIT;
         ^~~~~
12:01:45 **** Incremental Build of configuration Debug for project Assi_1_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_1_2.o" "..\\src\\Assi_1_2.c" 
..\src\Assi_1_2.c: In function 'main':
..\src\Assi_1_2.c:19:28: error: 'X' undeclared (first use in this function)
     printf("You enterd:%d",X);
                            ^
..\src\Assi_1_2.c:19:28: note: each undeclared identifier is reported only once for each function it appears in
12:05:04 **** Incremental Build of configuration Debug for project Assi_1_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_1_2.o" "..\\src\\Assi_1_2.c" 
..\src\Assi_1_2.c: In function 'main':
..\src\Assi_1_2.c:19:29: error: 'X' undeclared (first use in this function)
     printf("You enterd: %d",X);
                             ^
..\src\Assi_1_2.c:19:29: note: each undeclared identifier is reported only once for each function it appears in
12:05:16 **** Incremental Build of configuration Debug for project Assi_1_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_1_2.o" "..\\src\\Assi_1_2.c" 
..\src\Assi_1_2.c: In function 'main':
..\src\Assi_1_2.c:19:29: error: 'X' undeclared (first use in this function)
     printf("You enterd: %d",X);
                             ^
..\src\Assi_1_2.c:19:29: note: each undeclared identifier is reported only once for each function it appears in
12:05:51 **** Incremental Build of configuration Debug for project Assi_1_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_1_2.o" "..\\src\\Assi_1_2.c" 
gcc -o Assi_1_2.exe "src\\Assi_1_2.o" 
